--- a/css/style.scss
+++ b/css/style.scss
@@ -18,23 +18,45 @@ body{
         height: max-content;
     }
     .left{
+        position: relative;
         img.logo{
             width: 65%;
     @media screen and (max-width:700px) {
         width:30%;
     }
-        }
-        // .title{
-        //     font-size: 1.4rem;
-        //     color:rgba(0, 0, 0, 0.849);
-        // }
+    
+}
+
+// .title{
+    //     font-size: 1.4rem;
+    //     color:rgba(0, 0, 0, 0.849);
+    // }
     padding: 2.5rem;
-        display: flex;
-        gap:.5rem;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        background: #00ffaa;
+    display: flex;
+    gap:.5rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: #00ffaa;
+    &::before{
+        z-index: -1;
+        padding: 0;
+        margin: 0;
+        background: #00ffaafa;
+        
+        position: absolute;
+        content: "";
+        top:-2.5rem;
+        left: -4.2rem;
+        height: 100vh;
+        width: 125%;
+        @media screen and (max-width:700px) {
+            top:-2.5rem;
+            left: -2.5rem;
+            width:103vw;
+                        height: 115%;
+        }
+    }
         p.desc{
             color:rgba(0, 0, 0, 0.897);
             text-align: center;
